--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="contact-info">
                 <div class="location">
                     <img src="icon-location.svg" alt="Location">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiumod tempor incididunt ut labore et dolore magna aliqua</p>
                 </div>
                 <div class="phone">
                     <img src="icon-phone.svg" alt="Email">
